<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/>
	</parent>

	<groupId>md.maib.retail</groupId>
	<artifactId>loyalty-campaign-service</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>loyalty-campaign-service</name>

	<modules>
		<module>domain-model</module>
		<module>application</module>
		<module>infrastructure/bootstrap</module>
        <module>infrastructure/adapters/rest</module>
		<module>infrastructure/adapters/persistence</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<equalsverifier.version>3.15.1</equalsverifier.version>
		<jackson-datatype-money.version>1.3.0</jackson-datatype-money.version>
		<moneta.version>1.4.2</moneta.version>
		<spring-cloud.version>2023.0.1</spring-cloud.version>
		<threeten-extra.version>1.7.2</threeten-extra.version>
		<testcontainers-spring-boot.version>3.1.1</testcontainers-spring-boot.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.threeten</groupId>
			<artifactId>threeten-extra</artifactId>
			<version>${threeten-extra.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>nl.jqno.equalsverifier</groupId>
				<artifactId>equalsverifier</artifactId>
				<version>${equalsverifier.version}</version>
			</dependency>
			<dependency>
				<groupId>org.javamoney.moneta</groupId>
				<artifactId>moneta-core</artifactId>
				<version>${moneta.version}</version>
			</dependency>
			<dependency>
				<groupId>org.threeten</groupId>
				<artifactId>threeten-extra</artifactId>
				<version>${threeten-extra.version}</version>
			</dependency>
			<dependency>
				<groupId>org.zalando</groupId>
				<artifactId>jackson-datatype-money</artifactId>
				<version>${jackson-datatype-money.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.maven.shared</groupId>
				<artifactId>maven-invoker</artifactId>
				<version>${maven-invoker.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
